# dream-net

./: -la  grep -E .env  .cursorrules  .dockerignore  .env  .env.aegis  .env.dreamcreation  .env.example  .env.gcp  .env.social-media.template  .firebaserc  .gcloudignore  .gitignore  .google-tokens.json  .mcp.json  .npmrc  .railwayignore  .replit  .swcrc  .vercelignore  ACCOUNT_STRATEGY.md  ACTIVATION_SUMMARY.md  ADDITIONAL_IDEAS.md  AGENTS.md  AGENTS_GROWTH_ACTIVATION.md  AGENT_AUTONOMOUS_DATA_LOOP_SYSTEM.md  AGENT_CAPABILITY_ANALYSIS.md  AGENT_CONNECTION_TROUBLESHOOTING.md  AGENT_ECOSYSTEM_ANALYSIS.md  AGENT_ECOSYSTEM_COMPLETE.md  AGENT_ENDPOINTS_READY_1760775843847.md  AGENT_INVENTORY.json  AGENT_MESSAGING_1760775853231.md  AGENT_QUICK_REFERENCE.md  AGENT_REALWORLD_INTERACTION.md  AI_AGENTS_ENHANCED.md  AI_FEATURES_ADDED.md  ALL_59_MINI_APPS_EXPLAINED.md  ALL_BASE_MINI_APPS_COMPLETE.md  ALL_PROFILE_PAGES_OPEN.md  ANTIGRAVITY_CHECKLIST.md  (+753 more)
.brainsync/: .context-key  shared-context.json
.change_os/: 90b34d5c-a73d-4928-9be2-23f4d4f68e9f.json  aaf9a907-9fa7-4a43-9df3-2fbe756d05df.json  ad85d311-c5f3-4928-81d1-e1b70cfae2d9.json  b1dd0cd2-0959-4e35-ae58-7b85e331c106.json
.cursor/: active-context.md
.firebase/: hosting.Y2xpZW50XGRpc3Q.cache
.gemini/: GEMINI.md
.github/: FUNDING.yml
agents/: AgentConductor.js  AutonomousLeadAgent.js  aegis.json  deployKeeper.cjs  deploymentAssistant.ts
analytics/: machine_learning_predictor.py
api/: health.ts  integration.py  registry.ts
app/: page.tsx
automation_scripts/: ollama_task_management.py
client/: .npmrc  (+7 more)
(+3511 files in other folders)
